--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,12 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
+foo: 
+  email: "foo@bar.com"
+  admin: true
 #
-two: {}
-# column: value
+bar:   
+  email: "foo2@bar.com"
+
+baz:   
+  email: "foo@baz.com"
