--- a/test/fixtures/admin_users.yml
+++ b/test/fixtures/admin_users.yml
@@ -4,8 +4,8 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
+one: 
+  email: "admin_1@example.com"
 #
-two: {}
-# column: value
+two: 
+  email: "admin_2@example.com"
