New improved tests

--- a/test/fixtures/admin_users.yml
+++ b/test/fixtures/admin_users.yml
@@ -4,8 +4,7 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: 
-  email: "admin_1@example.com"
+admin: 
+  email: "admin@example.com"
+  encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
 #
-two: 
-  email: "admin_2@example.com"
