changes to products controller and models

--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -6,13 +6,13 @@ one:
   specs: MyText
   product_code: MyString
   price: 100
-  user: foo
+  admin_user: admin
 
 two:
   name: MyString
   description: MyText
   specs: MyText
   product_code: MyString2
-  user: bar
   price: 200
+  admin_user: admin
 
