--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ cache:
 services:
   - postgresql
 before_install:
+  - echo "$RAILS_MASTER_KEY" > config/master.key
   - nvm install --lts
 before_script:
   - bundle install --jobs=3 --retry=3
